# LigaBrasileira

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  python-app.yml
brasileirao/core/: __init__.py
brasileirao/data/: cidades_db.py  estadios_db.py  historico.py  nomes_db.py  rivais_db.py  times_db.py
brasileirao/gui/: controller.py  initializer.py
brasileirao/persistence/: history.py  history_manager.py  save_system.py
core/data/: cidade_db.py  estadio_db.py  nomes_db.py  rivais_db.py  times_db.py
core/entities/: calendario.py  competicao.py  copa.py  jogador.py  liga.py  partida.py  pessoa.py  simulador_partida.py  tecnico.py  time.py
core/enums/: estilo_tatico.py  fase_partida.py  gravidade_esquema.py  posicao.py  setor.py
core/systems/: contratacao.py  desenvolvimento.py  narrador.py  sistema_classificacao.py  sistema_esquemas_ilegais.py  sistema_eventos.py  sistema_financeiro.py  sistema_regens.py
gui/frames/: __init__.py  classificacao_frame.py  financas_frame.py  historico_frame.py  main_menu_frame.py  manager_frame.py  (+2 more)
persistence/: history.py  save_system.py
simulation/: interface.py  temporada.py
tests/: test_bancarrota.py  test_calendario.py  test_competicao.py  test_copa.py  test_demissao.py  test_eventos.py  test_financeiro.py  test_historico.py  test_initializer.py  test_jogador.py  test_liga.py  test_liga_points.py  test_partida.py  test_partida_resultado.py  test_pessoa.py  test_regens.py  test_segunda_divisao.py  test_simulador_partida.py  test_simulador_temporada.py  test_time_liga.py
(+45 files in other folders)
